# TwoViewGeometry

./: CMakeLists.txt  README.md  cpplint.py
app/eigen_example/: CMakeLists.txt  CMakeLists.txt~
app/eigen_example/src/: main.cpp  main.cpp~
app/eigen_example/test/: eigen_example_test.cpp.dep
app/helloworld/: CMakeLists.txt
cmake/: add_target.cmake  add_unit_test.cmake
lib/kinematics/: CMakeLists.txt  CMakeLists.txt~
lib/kinematics/include/: matrix_types.h~
lib/kinematics/include/kinematics/: matrix_types.h  rotation3.h
lib/kinematics/src/: rotation3.cpp
lib/kinematics/test/: rotation3_test.cpp
